# open-env-fire-rescue-drone

./: Dockerfile  LICENSE  README.md  app.py  dashboard.css  dashboard.html  dashboard.js  dashboard_backend.py  dashboard_server.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
server/server/: app.py
