[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grexo-fire-rescue"
version = "1.3.0"
description = "OpenEnv-compatible fire rescue drone swarm simulator with FastAPI endpoints and mission-control dashboard."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
  { name = "GREXO" }
]
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.7,<3",
  "openai>=2.7.2,<3",
  "openenv-core>=0.2.0,<0.3",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = [
  "app",
  "dashboard_backend",
  "dashboard_server",
  "env",
  "inference",
  "models",
  "test_env",
]
packages = ["server"]
